[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
async-trait = "0.1.82"
thiserror = "1.0.63"
actix-web = "4.9.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
actix-multipart = "0.7.2"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tonic = { version = "0.12.0", features = ["transport"] }
prost = "0.13.2"
futures = "0.3.30"
async-stream = "0.3.5"
serde_yaml = "0.9.34"
env_logger = "0.11.5"

[build-dependencies]
tonic-build = "0.12.0"
